k8s/microk8s/base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prode-back-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prode-back-db
  template:
    metadata:
      labels:
        app: prode-back-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: prode-back-db-pvc
