k8s/microk8s/base/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prode-back-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prode-back-redis
  template:
    metadata:
      labels:
        app: prode-back-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "150m"
