k8s/microk8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prode-back-redis
spec:
  selector:
    app: prode-back-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
