k8s/microk8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prode-back
spec:
  selector:
    app: prode-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
